--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /.target
 /bin
-/target
-/project
+/target/streams
+/target/resolution-cache
+/project/project/target/config-classes
+/project/target/resolution-cache
+/project/target/streams
 /.cache
 /.classpath
 /*.swp
